added graph composition and plot

--- a/scenario_5/train.html
+++ b/scenario_5/train.html
@@ -3,8 +3,12 @@
         <div class="a y">
             <div class="b c">
                 <div class="x a">
-                    <div class="c">
-                        <h1>This is test case 1!</h1>
+                    <div class="ni">
+                        <div class="b c">
+                            <div class="c">
+                                <h1>This is test case 1!</h1>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
