test & train .html pages added along with some graphs

--- a/scenario_6/test.html
+++ b/scenario_6/test.html
@@ -1,10 +1,8 @@
 <html>
     <body>
-        <div class="y a">
-            <div class ="z    y">
-                <div class="c">
-                    <h1>This is test case 1!</h1>
-                </div>
+        <div class="a">
+            <div class ="b y">
+
             </div>
         </div>
     </body>
