--- a/scenario_6/train.html
+++ b/scenario_6/train.html
@@ -1,35 +1,11 @@
 <html>
     <body>
-        <div class="a y">
-            <div class="b c">
-                <div class="x a">
-                    <div class="ni">
-                        <div class="b c">
-                            <div class="c">
-                                <h1>This is test case 1!</h1>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div class="a">
+            <div class="b"></div>
         </div>
-        <div class="a y">
-            <div class ="y z">
-                <div class="i">
-                    <div class="c">
-                        <h1>This is test case 1!</h1>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="a y">
-            <div class ="z y">
-                <div class="q">
-                    <div class="c">
-                        <h1>This is test case 1!</h1>
-                    </div>
-                </div>
-            </div>
+
+        <div class="a g">
+            <div class="y"></div>
         </div>
     </body>
 </html>
