--- a/scenario_7/test.html
+++ b/scenario_7/test.html
@@ -1,7 +1,7 @@
 <html>
     <body>
         <div class="a">
-            <div class ="b y">
+            <div class ="x z y">
 
             </div>
         </div>
