--- a/scenario_7/train.html
+++ b/scenario_7/train.html
@@ -1,11 +1,15 @@
 <html>
     <body>
         <div class="a">
-            <div class="b"></div>
+            <div class="x e"></div>
         </div>
 
         <div class="a g">
-            <div class="y"></div>
+            <div class="y b"></div>
+        </div>
+
+        <div class="a f">
+            <div class="j z"></div>
         </div>
     </body>
 </html>
