fixed scenario 8 test.html & added display of graph with "*" depths

--- a/scenario_8/test.html
+++ b/scenario_8/test.html
@@ -1,13 +1,7 @@
 <html>
     <body>
         <div class="a">
-            <div class ="j">
-                <div class="u">
-                    <div class="b">
-                        <div class="x"></div>
-                    </div>
-                </div>
-            </div>
+            <div class ="x z y"></div>
         </div>
     </body>
 </html>
