--- a/scenarios/scenario_12/coreui-free-bootstrap-admin-template-3-next/src/index.html
+++ b/scenarios/scenario_12/coreui-free-bootstrap-admin-template-3-next/src/index.html
@@ -53,6 +53,9 @@
     <link href="node_modules/@coreui/chartjs/dist/css/coreui-chartjs.css" rel="stylesheet">
   </head>
   <body class="c-app">
+    <div class="row">
+      <div class="c-app"></div>
+    </div>
     <div class="c-sidebar c-sidebar-dark c-sidebar-fixed c-sidebar-lg-show" id="sidebar">
       <div class="c-sidebar-brand d-lg-down-none">
         <svg class="c-sidebar-brand-full" width="118" height="46" alt="CoreUI Logo">
