--- a/w3_bootstrap_examples/120.html
+++ b/w3_bootstrap_examples/120.html
@@ -19,6 +19,7 @@
   <div class="card-group">
     <div class="card bg-primary">
       <div class="card-body text-center">
+        <div class="row"></div>
         <p class="card-text">Some text inside the first card</p>
         <p class="card-text">Some more text to increase the height</p>
         <p class="card-text">Some more text to increase the height</p>
