--- a/w3_bootstrap_examples/220.html
+++ b/w3_bootstrap_examples/220.html
@@ -16,10 +16,10 @@
   <p>Create two form elements that appear side by side with .row and .col:</p>
   <form>
     <div class="row">
-      <div class="col">
+      <div class="col-sm-1">
         <input class="form-control" id="email" name="email" placeholder="Enter email" type="text"/>
       </div>
-      <div class="col">
+      <div class="col-sm-1">
         <input class="form-control" name="pswd" placeholder="Enter password" type="password"/>
       </div>
     </div>
