--- a/frameworks-examples/foundation-sites-develop/test-pages/test2.html
+++ b/frameworks-examples/foundation-sites-develop/test-pages/test2.html
@@ -1,10 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
+<!doctype html>
+<!--[if IE 9]><html class="lt-ie10" lang="en" > <![endif]-->
+<html class="no-js" lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <title>Foundation for Sites Testing</title>
+    <link href="../assets/css/foundation-flex.css" rel="stylesheet" />
+  </head>
+  <body>
+    <div class="column">
+        <div class="container">
+            <div class="row">
+
+                <h1>Grid and Flex Grid: Nesting in collapsed row</h1>
+
+                <p>These are nested standard and collapsed rows. All rows should be aligned on the right and left.</p>
+            </div>
+        </div>
+    </div>
+  </body>
 </html>
