--- a/w3_bootstrap_examples/21.html
+++ b/w3_bootstrap_examples/21.html
@@ -16,26 +16,26 @@
   <div class="container">
     <h5>row-cols-4:</h5>
     <div class="row row-cols-4 mb-4">
-      <div class="col border p-3">Column</div>
-      <div class="col border p-3">Column</div>
-      <div class="col border p-3">Column</div>
-      <div class="col border p-3">Column</div>
+      <div class="border p-3">Column</div>
+      <div class="border p-3">Column</div>
+      <div class="border p-3">Column</div>
+      <div class="border p-3">Column</div>
     </div>
     
     <h5>row-cols-2:</h5>
     <div class="row row-cols-2 mb-4">
-      <div class="col border p-3">Column</div>
-      <div class="col border p-3">Column</div>
-      <div class="col border p-3">Column</div>
-      <div class="col border p-3">Column</div>
+      <div class="border p-3">Column</div>
+      <div class="border p-3">Column</div>
+      <div class="border p-3">Column</div>
+      <div class="border p-3">Column</div>
     </div>
     
     <h5>row-cols-3:</h5>
     <div class="row row-cols-3 mb-4">
-      <div class="col border p-3">Column</div>
-      <div class="col border p-3">Column</div>
-      <div class="col border p-3">Column</div>
-      <div class="col border p-3">Column</div>
+      <div class="border p-3">Column</div>
+      <div class="border p-3">Column</div>
+      <div class="border p-3">Column</div>
+      <div class="border p-3">Column</div>
     </div>
   </div>
 </div>
