--- a/w3_bootstrap_examples/26.html
+++ b/w3_bootstrap_examples/26.html
@@ -13,7 +13,7 @@
   <h2>Dropdowns</h2>
   <p>Add the .dropright class next to the dropdown menu to right-align the dropdown. Note that the caret/arrows is added automatically:</p>
   <div class="dropdown dropright">
-    <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown" type="button">
+    <button class="btn btn-primary dropdown-toggle c-header-nav-link pt-0" data-toggle="dropdown" type="button">
       Dropright button
     </button>
     <div class="dropdown-menu">
